crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-crawler
  labels:
    app: synergychat-crawler
spec: # this is the spec of deployment
  replicas: 1
  selector: # selector is used to find the pods that the deployment manages
    matchLabels:
      app: synergychat-crawler
  template: # this describe the pod that Deployment will create
    metadata:
      labels:
        app: synergychat-crawler
    spec: # this is the pod spec for each pod created by the Deployment
      containers:
      - name: synergychat-crawler-1
        image: bootdotdev/synergychat-crawler:latest
        envFrom: # use envFrom keyword to prevent repetitive env keys
          - configMapRef:
              name: synergychat-crawler-configmap
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
      - name: synergychat-crawler-2
        image: bootdotdev/synergychat-crawler:latest
        env: # this is how to set env value for a container instead of pulling all env key values
          - name: CRAWLER_PORT # set name of the env variable here
            valueFrom: # keywords to refer a configmap
              configMapKeyRef: # keywords to refer a configmap
                name: synergychat-crawler-configmap # metadata.name of the configmap
                key: CRAWLER_PORT2
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
      - name: synergychat-crawler-3
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
      volumes:
        - name: cache-volume
          emptyDir: {}
