web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Optional: labels identify this Deployment and can be used for grouping.
  labels:
    app: synergychat-web
  name: synergychat-web
spec:
  # Optional: desired number of running Pods; default is 1.
  # replicas: 3
  selector:
    matchLabels:
      app: synergychat-web
  template: # this is where the pod template is defined
    metadata:
      labels:
        app: synergychat-web 
    spec:
      containers:
      - image: docker.io/bootdotdev/synergychat-web:latest
        name: synergychat-web
        # Optional: imports all key/value pairs from the referenced ConfigMap.
